kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: liceu-dev
  annotations:
    reloader.stakater.com/auto: "true"
  name: liceu-dev
  namespace: dev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: liceu-dev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: liceu-dev
    spec:
      containers:
        - name: kotlinserver
          image: gcr.io/liceu-main/kotlinserver:latest
          imagePullPolicy: IfNotPresent
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
