kubernetes/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liceu-dev-svc
  namespace: dev
spec:
  selector:
     app: liceu-dev
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
